--- a/src/scss/_FilterForm.scss
+++ b/src/scss/_FilterForm.scss
@@ -6,6 +6,11 @@
   background-color: #e38f4b;
   padding-bottom: 4%;
 
+  input {
+    border-radius: 25px;
+    padding: 0 8px;
+  }
+
   &__span {
     display: inline-block;
     height: 60%;
@@ -21,10 +26,17 @@
     color: #fff;
   }
   .filter-btn {
+    height: 30px;
+    width: 30px;
     position: absolute;
-    bottom: 33.5%;
-    left: 3.5%;
-    padding: 2px 10px;
+    bottom: 36%;
+    left: 4%;
+    padding: 0 3px;
+    border-radius: 25px;
+
+    svg {
+      font-size: 14px;
+    }
   }
 
   .react-datepicker__navigation {
