--- a/src/scss/_SchoolWorks.scss
+++ b/src/scss/_SchoolWorks.scss
@@ -11,8 +11,19 @@
   }
 }
 
+.loading-p {
+  position: absolute;
+  top: 10%;
+  right: 50%;
+  text-align: center;
+  direction: rtl;
+}
+
 @media (max-width: 768px) {
   .add-work__btn {
     width: 100%;
+  }
+  .loading-p {
+    right: 35%;
   }
 }
